Add apple-touch-icon link to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>【官方】[你的套件名稱] Pro 版 - 解鎖無限次數與進階功能</title>
     <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="apple-touch-icon" href="favicon.png">
     <meta name="description" content="立即升級 [你的套件名稱] Pro 開發者版本，解鎖字串顯示限制，體驗更強大的自動化功能。點擊加入 LINE OA 領取最新安裝包。">
     <meta name="keywords" content="Chrome套件, [功能關鍵字], Pro版下載, 軟體訂閱">
     
